Version 1.0.0
    * Added German translation

Version 0.1.1
    * Fixed Bug: Only the first package was listed

Version 0.1.0
    * Initial release